grammar.js
    source_file: $ => seq(
      optional($.hashbang_comment),
      repeat($.using_directive),
      repeat(
        choice($.namespace_member, $._statement)
      )
    ),

    // taken from tree-sitter-c
    // http://stackoverflow.com/questions/13014947/regex-to-match-a-c-style-multiline-comment/36328890#36328890
    hashbang_comment: $ => prec(1,
      seq(
        $.hashbang_marker,
        $.hashbang_comment_content
      )
    ),

    using_directive: $ => seq(
      'using',
      $.symbol,
      repeat(seq(',', $.symbol)),
      ';'
    ),

    // symbol: $ => choice(
    //   seq($.symbol, '.', $.identifier),
    //   seq(optional('global::'), $.identifier)
    // ),
    
    symbol: $ => seq(
      optional('global::'),
      sep1($.identifier, '.')
    ),

    identifier: $ => /[@A-Za-z_]\w*/,

    namespace_member: $ => seq(
      repeat($._attribute_list),
      choice(
        $.namespace_declaration,
        $.class_declaration,
        $.interface_declaration,
        $.struct_declaration,
        $.enum_declaration,
        $.errordomain_declaration,
        $.delegate_declaration,
        $.method_declaration,
        $.signal_declaration,
        $.field_declaration,
        $.constant_declaration
      )
    ),

    _attribute_list: $ => seq(
      '[',
      commaSep1($.attribute),
      ']'
    ),

    _expression: $ => choice(
      $._contained_expression,
      $.initializer,
      $.yield_expression,
      $.lambda_expression,
      $.static_cast_expression,
      $._unary_expression,
      $.multiplicative_expression,
      $.arithmetic_expression,
      $.in_expression,
      $.bitshift_expression,
      $.dynamic_cast_expression,
      $.type_relational_expression,
      $.relational_expression,
      $.equality_expression,
      $.bitwise_and_expression,
      $.bitwise_xor_expression,
      $.bitwise_or_expression,
      $.logical_and_expression,
      $.logical_or_expression,
      $.null_coalescing_expression,
      $.ternary_expression,
      $.assignment_expression
    ),

    // expressions that never need to be wrapped in parentheses
    _contained_expression: $ => choice(
      seq('(', $._expression, ')'),
      $._literal,
      $.array_creation_expression,
      $.object_creation_expression,
      $.this_access,
      $.base_access,
      $.value_access,
      $.member_access_expression,
      $.element_access_expression,
      $.method_call_expression,
      $.sizeof_expression,
      $.typeof_expression,
      $.postfix_expression,
    ),

    // expressions that are contained by an operator to the left
    // for example:
    // if (!yield x())
    //      ^^^^^^^^^ -- we don't need parens here because of the '!' operator
    _left_contained_expression: $ => choice(
      $._contained_expression,
      $.yield_expression,
      $.static_cast_expression,
      $._unary_expression
    ),

    member_access_expression: $ => seq(
      optional(seq(
        $._contained_expression,
        choice('.', '?.', '->'),
      )),
      $.identifier
    ),

    argument: $ => choice(
      seq('ref', $._expression),
      seq('out', $._expression),
      $._expression,
      seq($.identifier, ':', $._expression)
    ),

    method_call_expression: $ => seq(
      choice(
        seq('(', $._expression, ')'),
        seq($.member_access_expression, optional($.type_arguments)),
        $._contained_expression
      ),
      '(',
      commaSep($.argument),
      ')'
    ),

    yield_expression: $ => seq('yield', $._expression),

    logical_negation_expression: $ => prec.right(14, seq(choice('!', 'not'), $._left_contained_expression)),
    arithmetic_expression: $ => prec.left(12, seq($._expression, choice('+', '-'), $._expression)),
    in_expression: $ => prec.left(10, seq($._expression, optional('not'), 'in', $._expression)),
    _assignment_operator: $ => choice('=', '+=', '-=', '|=', '&=', '^=', '/=', '*=', '%=', '<<=', '>>='),
    assignment_expression: $ => prec.right(1, seq($._expression, $._assignment_operator, $._expression)),

    object_creation_expression: $ => seq(
      'new',
      $.unqualified_type,
      // $.type,
      // optional(seq('.', $.identifier)),
      '(',
      commaSep($.argument),
      ')',
      optional($.object_initializers)
    ),

    integer: $ => choice(/([1-9]\d*|0[0-7]*)[UuLl]?/, /0[xX][A-Fa-f0-9]+/),
    real: $ => /\d+(\.\d+)?([eE][+-]?\d+)?[Ff]?/,
    string: $ => seq(
      '"',
      repeat(choice(
        token(prec(2, /[^"%\\]+/)),
        $.escape_sequence,
        /\\[^abefnrtv\\'"? xXuU]/,
        $.string_formatter,
        /%[^$#0\- +'I\d\\.hlqLjzZtdiouxXeEfFgGaAcsCSpnm%"]/
      )),
      token(prec(2, '"'))
    ),
    escape_sequence: $ => /\\([abefnrtv\\'"? ]|[0-7]{3}|[xX][A-Fa-f0-9]{2}|[uU][A-Fa-f0-9]{4,8})/,
    string_formatter: $ => /%\$?[#0\- +'I]?\d*(\.\d+)?(hh?|ll?|q|L|j|z|Z|t)?[diouxXeEfFgGaAcsCSpnm%]?/,
    verbatim_string: $ => seq(
      '"""',
      repeat(
        /(.|\n)/,
      ),
      '"""'
    ),

    type: $ => choice(
      'var',
      seq('void', repeat('*')),
      seq(
        optional('dynamic'),
        optional(choice('unowned', 'owned', 'weak')),
        '(',
        $.type,
        ')',
        repeat1($.array_type)
      ),
      seq(
        optional('dynamic'),
        optional(choice('unowned', 'owned', 'weak')),
        $.symbol,
        optional($.type_arguments),
        repeat('*'),
        optional('?'),
        repeat($.array_type)
      )
    ),

    /**
     * eg. `Gee.List<int>`
    */ 
    unqualified_type: $ => seq(
      $.symbol,
      optional($.type_arguments)
    ),

    /**
    * eg. `<Foo, Object>`
    */
    namespace_declaration: $ => seq(
      'namespace',
      $.symbol,
      '{',
      repeat($.using_directive),
      repeat($.namespace_member),
      '}'
    ),

    class_declaration: $ => seq(
      optional($.access_modifier),
      repeat($.modifier),
      'class',
      $.unqualified_type,
      field(
        "inheritance_list",
        optional(seq(':', commaSep1($.type))),
      ),
      '{',
      repeat($.class_member),
      '}'
    ),

    method_declaration: $ => seq(
      optional($.access_modifier),
      repeat($.modifier),
      $.type,
      $.symbol,
      optional($.type_arguments),
      '(',
      commaSep($.parameter),
      ')',
      optional(seq('throws', $.type)),
      optional(seq(choice('requires', 'ensures'), '(', $._expression, ')')),
      choice($.block, ';')
    ),

    field_declaration: $ => seq(
      optional($.access_modifier),
      repeat($.modifier),
      $.type,
      $.identifier,
      optional($.inline_array_type),
      optional(seq('=', $._expression)),
      ';'
    ),

    local_declaration: $ => seq(
      $.type,
      $.assignment,
      repeat(seq(',', $.assignment)),
      ';'
    ),

    assignment: $ => prec.dynamic(20, seq(
      field('left', $.identifier),
      optional($.inline_array_type),
      optional(seq('=', $._expression))
    )),

    block: $ => seq(
      '{',
      repeat(choice(
        $._statement,
        $.local_declaration,
        $.local_function_declaration
      )),
      '}'
    ),

    _statement: $ => choice(
      $.if_statement,
      $._statement_without_if
    ),

    // resolves ambiguities with 'else if'
    expression_statement: $ => seq($._expression, ';'),

    if_statement: $ => seq(
      'if', '(', $._expression, ')',
      $._statement,
      repeat($.elseif_statement),
      optional($.else_statement)
    ),

    if_directive: $ => seq('if', field('expression', $._preprocessor_expression)),

    elif_directive: $ => seq('elif', field('expression', $._preprocessor_expression)),

    else_directive: $ => 'else',

    endif_directive: $ => 'endif',

    _preprocessor_expression: $ => choice(
      seq('(', $._preprocessor_contained_expression, ')'),
      $.identifier,
      $._literal
    ),
