test/corpus/namespaces.txt
==========
Namespaces
==========

namespace Foo {
}

namespace Foo.Bar {
}

namespace global::Foo.Bar.Some {
    class SomeClass {}
}

namespace Foo {
    namespace Bar {
    }
}

var a = new global::Foo.Bar.Some.SomeClass();

---

(source_file
  (namespace_member
    (namespace_declaration
      (symbol
        (identifier))))
  (namespace_member
    (namespace_declaration
      (symbol
        (identifier)
        (identifier))))
  (namespace_member
    (namespace_declaration
      (symbol
        (identifier)
        (identifier)
        (identifier))
      (namespace_member
        (class_declaration
          (unqualified_type
            (symbol
              (identifier)))))))
  (namespace_member
    (namespace_declaration
      (symbol
        (identifier))
      (namespace_member
        (namespace_declaration
          (symbol
            (identifier))))))
  (namespace_member
    (field_declaration
      (type)
      (identifier)
      (object_creation_expression
        (unqualified_type
          (symbol
            (identifier)
            (identifier)
            (identifier)
            (identifier)))))))
